--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18"
   },
